--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -48,6 +48,9 @@ flutter_gen:
 flutter:
   uses-material-design: true
   assets:
+    - packages/example/images/fuchsia.svg
+    - packages/example/json/fruits.json
+    - packages/example/pictures/chip5.jpg
     - assets/images/
     - assets/images/chip3/chip3.jpg
     - assets/images/chip3/chip3.jpg # duplicated
